# distributed-training-compare-jax

./: README.md  main.py  plot.py  pyproject.toml
config/: schema.py
configs/: model_config.yaml  optim_config.yaml  train_config_dp.yaml  train_config_pp.yaml  train_config_tp.yaml
data/: fineweb_edu.py
model/: CausalSelfAttention.py  GPTModel.py  MLP.py  TransformerBlock.py
outputs/dp/: log.csv
outputs/pp/: log.csv
outputs/tp/: log.csv
parallel/: sharding.py
train/: create_optimizer.py  create_train_step.py  train.py
