[project]
name = "distributed-training-compare-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "datasets>=4.5.0",
    "flax>=0.12.4",
    "jax[cuda12]>=0.9.0.1",
    "matplotlib>=3.10.8",
    "optax>=0.2.6",
    "pandas>=3.0.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
